# Libtorch-Study

./: CMakeLists.txt  main.cpp
